@@ -7,6 +7,7 @@ extern "C" {
 
 #include <stdint.h>
 
+#define KERNAUX_NTOA_DEFAULT_PREFIX_2  "0b"
 #define KERNAUX_NTOA_DEFAULT_PREFIX_8  "0o"
 #define KERNAUX_NTOA_DEFAULT_PREFIX_16 "0x"
 
@@ -16,6 +17,13 @@ extern "C" {
 // "111111111111111111111111111111111111111111111111111111111111111"
 // "-1000000000000000000000000000000000000000000000000000000000000000"
 #define KERNAUX_ITOA_MIN_BUFFER_SIZE (65 + 1)
+
+// "0b1111111111111111111111111111111111111111111111111111111111111111"
+#define KERNAUX_UTOA2_BUFFER_SIZE (64 + 2 + 1)
+
+// "0b111111111111111111111111111111111111111111111111111111111111111"
+// "-0b1000000000000000000000000000000000000000000000000000000000000000"
+#define KERNAUX_ITOA2_BUFFER_SIZE (65 + 2 + 1)
 
 // "0o1777777777777777777777"
 #define KERNAUX_UTOA8_BUFFER_SIZE (21 + 2 + 1)
@@ -40,6 +48,9 @@ extern "C" {
 
 char *kernaux_utoa(uint64_t value, char *buffer, int base, const char *prefix);
 char *kernaux_itoa(int64_t  value, char *buffer, int base, const char *prefix);
+
+char *kernaux_utoa2(uint64_t value, char *buffer);
+char *kernaux_itoa2(int64_t  value, char *buffer);
 
 char *kernaux_utoa8(uint64_t value, char *buffer);
 char *kernaux_itoa8(int64_t  value, char *buffer);
